--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .quiz{
-    background-color: grey;
+    background-color: #002447;
     padding-top: 10px;
 }
 
@@ -29,9 +29,10 @@
 
 .heading .title{
     font-size: 30px;
-    color: white;
+    color: #52CBCA;
     font-weight: 500;
     text-align: center;
+    margin-bottom: 15px;
 
 }
 
@@ -82,9 +83,9 @@
 }
 
 .question {
-    background-color: whitesmoke;
+    background-color: #efe4e4;
     padding: 20px;
-    margin: 10px 20px;
+    margin: 20px 20px;
     border-radius: 8px;
     box-shadow: var(--box-shadow);
     
@@ -106,6 +107,8 @@
 .correct{
     background-color: rgb(137, 244, 137);
 }
+
+/* ------color---------- */
 
 .wrong{
     background-color: rgb(243, 146, 111);
